--- a/client/resource/style/index.css
+++ b/client/resource/style/index.css
@@ -122,7 +122,7 @@ width: 250px;
 
 .map {
 width: 100%;
-height: 400px;
+height: 600px;
 margin-left: 20px;
 }
 
@@ -157,4 +157,11 @@ flex: 1; /* Allow the filter container to grow and fill available space */
 width: 100%; /* Make the select elements fill the entire width of their container */
 padding: 0.5rem;
 margin-right: 1rem;
+}
+
+.text-label {
+  font-size: 12px;
+  font-weight: bold;
+  color: black;
+  text-align: center;
 }
