--- a/client/resource/style/index.css
+++ b/client/resource/style/index.css
@@ -5,15 +5,20 @@
   display: block;
 }
 
+.login-button button {
+  background-color: white;
+  color: black;
+  border: none;
+  cursor: pointer;
+}
+
 body {
   margin: 0;
   font-family: Arial, sans-serif;
   background: #f5f5f5;
 }
 .header {
-  display: flex;
   justify-content: space-between;
-  align-items: center;
   background-color: #004a8d;
   color: white;
   padding: 1rem;
@@ -87,12 +92,13 @@ background-color: #e9ecef;
 margin: 0; /* Adjust as needed */
 }
 
-.login-button button {
-padding: 0.5rem 1rem;
-background-color: #004a8d;
-color: white;
-border: none;
-cursor: pointer;
+.login-button {
+  margin-left: auto; /* Pushes the login button to the right */
+  background-color: #004a8d;
+  color: white;
+  border: none;
+  cursor: pointer;
+  padding: 0.5rem 1rem; /* Adjust padding as needed */
 }
 
 .container {
