--- a/login.css
+++ b/login.css
@@ -93,9 +93,8 @@ body {
 }
 
 .login-button button {
-    padding: 0.5rem 1rem;
-    background-color: #004a8d;
-    color: white;
+    background-color: white;
+    color: black;
     border: none;
     cursor: pointer;
 }
